# baseplate.py

./: pyproject.toml  requirements-test.txt  setup.py
baseplate/frameworks/pyramid/: __init__.py
baseplate/lib/: secrets.py
baseplate/testing/: __init__.py  pyramid.py
